--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <!--Bootstrap or col/rows?-->
+    <!--Bootstrap...(Cards) or col/rows?-->
     
 
 
