--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 </head>
 <body>
     <!--Bootstrap...(Cards) or col/rows?-->
+
+<div>rows
+    <div>col1 search cities
+
+        <div>col2 display data
+            <div> 5 day forecast
+
+            </div>
+
+        </div>
+    
+    </div>
+</div>
     
 
-
+<!--scripts-->
 </body>
 </html>
