Adding classes to html, creating functions for js, ajax, city search, temp, humidity

--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
 <body>
     <!--Bootstrap...(Cards) or col/rows?-->
 
-<div>rows
-    <div>col1 search cities
+<div>
 
-        <div>col2 display data
-            <div> 5 day forecast
+  <input id="cityName" type="text" name="search" placeholder="Enter city name...">
+  <button id="citySearchBtn">
+    <i class="fa fa-search"></i>
+  </button>
+</div>
 
-            </div>
 
+<div class="rows">
+    <div class=" cityWeather col1 search cities">
+        <div class="col2 display data">
+            <h3> 
+              <!-- 5 day forecast -->
+            </h3>
         </div>
-    
     </div>
 </div>
     
