--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
 
              <div class="card" id="previousSearches">
-              <h1>previous searched cities</h1>
+              <h3>previous searched cities</h3>
               <ul class ="list-group list-group-flush"></ul>
               
             </div>
@@ -161,5 +161,6 @@
 <!--scripts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </body>
 </html>
