--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <p class="card-text displayTemp"></p>
               <p class="card-text displayHumid"></p>
               <p class="card-text displaySpeed"></p>
-              <p class="card-text displayIndex"></p>
+              <p id= "uvColor" class="card-text displayIndex"></p>
             </div>
           </div>
         
