refining, displaying city, date and icon in 'today' correctly

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
            <div class="card" >  
             
             <div class="card-body">
-              <h5 class="card-title DisplayTodaysDate DisplayTodayName DisplayTodayIcon">Todays Forecast</h5>
+              <h5 class="card-title DisplayName DisplayTodaysDate DisplayTodayName DisplayTodayIcon"></h5>
               <p class="card-text displayTemp"></p>
               <p class="card-text displayHumid"></p>
               <p class="card-text displaySpeed"></p>
