--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         
           <!-- 5 day Forecast -->
           <div class="row" id="temp">
+              <!-- <h3>5 day Forecast</h3> -->
               
           </div>
 
